# min-desk

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.sh  config.json  docker-compose.yml  open-vnc-client.sh
src/: browser.rs  config.rs  file_manager.rs  main.rs  package_manager.rs
