[package]
name = "min-desk"
version = "1.0.0"
edition = "2021"
authors = ["MinDesk Team"]
description = "Minimal desktop environment for Alpine and Talos OS"
license = "MIT"

[dependencies]
# Core GUI Framework
iced = { version = "0.12", features = ["image", "tokio", "canvas", "svg"] }

# Async runtime
tokio = { version = "1.39", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "process",
] }

# Serialization for config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system operations
dirs = "5.0"
walkdir = "2.4"

# HTTP client for browser
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "blocking",
] }

# HTML rendering (minimal)
html5ever = "0.26"
markup5ever_rcdom = "0.2"

# Process management
sysinfo = "0.30"

# Logging
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller panic handler
incremental = false # Disable incremental compilation

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "min-desk"
path = "src/main.rs"
